# devops-engineer-from-scratch-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: brain_even_logic.py  cli.py  cli_even.py  games_engine.py
brain_games/games/: brain_calc_logic.py  brain_even_logic.py  brain_gcd_logic.py  brain_prime_logic.py  brain_progression_logic.py  util_functions_for_games.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
